29/10 created a hero to App

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,38 @@ nav h3 {
 .icon-navbar {
   font-size: 1.3rem;
 }
+
+.hero {
+  background-image: url(./assets/hero.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 37.6rem;
+}
+
+.hero h1 {
+  color:rgb(250, 250, 250);
+  font-weight: 600;
+  text-align: center;
+}
+
+.hero-box {
+  background-color: rgb(255, 255, 255);
+  padding: 1rem;
+  border-radius: 1rem;
+  margin-top: -50px;
+  /* border: 1px solid black; */
+  height: 11rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
+
+.hero-box .button-hero {
+  background-color: #7E8D5F;
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+  color:rgb(250, 250, 250);
+}
+
