--- a/src/index.css
+++ b/src/index.css
@@ -56,8 +56,74 @@ nav h3 {
 
 .hero-box .button-hero {
   background-color: #7E8D5F;
-  padding: 0.5rem 1rem;
-  border-radius: 1rem;
+  padding: 0.5rem 3rem;
+  border-radius: 0.5rem;
   color:rgb(250, 250, 250);
+  font-weight: 600;
 }
 
+/* ----------- main -----------  */
+
+.title-main {
+  text-align: center;
+  display: inline-block;
+  position: relative;
+  padding: 0;
+}
+
+.title-main:before, .title-main:after {
+  bottom: 12px;
+  content: "";
+  height: 1px;
+  position: absolute;
+  width: 114px;
+}
+
+.title-main:before {
+  left: 25rem;
+  background: #8a8a8a;
+  background: -webkit-gradient(linear,left top, right top,color-stop(0, #fff),to(#8a8a8a));
+  background: linear-gradient(90deg,#fff 0,#8a8a8a);
+}
+
+.title-main:after {
+  right: 25rem;
+  background: #8a8a8a;
+  background: -webkit-gradient(linear,left top, right top,color-stop(0, #8a8a8a),to(#fff));
+  background: linear-gradient(90deg,#8a8a8a 0,#fff);
+}
+
+/* -------- CARD ---------  */
+
+.card {
+  width: 100%;
+  border: none;
+}
+
+.card-img-top {
+  height: 15rem;
+  object-fit: cover;
+  background-color: #8a8a8a;
+  border-radius: 0.5rem;
+}
+
+.button-card {
+  background-color: #7E8D5F;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  color:rgb(250, 250, 250);
+  font-weight: 600;
+  transition: 0.5s;
+}
+
+.button-card:hover {
+  opacity: 80%;
+}
+
+.card a {
+  text-decoration: none;
+}
+
+.card a:hover {
+  color:#fff;
+}
