--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Poppins:wght@400;600;700&display=swap');
 
 /* font-family: 'Dancing Script', cursive; */
+* {
+  box-sizing: border-box !important;
+}
 
 body {
   margin: 0 auto;
@@ -9,11 +12,15 @@ body {
   width: 100%;
 }
 
+.row {
+  --bs-gutter-x: 0 !important;
+}
+
 nav {
   width: 100%;
   text-align: center;
   padding: 2rem 0;
-  background-image: url(./assets/wavesOpacity.svg);
+  background-image: url(./assets/waves.svg);
 }
 
 nav h3 {
@@ -25,6 +32,7 @@ nav h3 {
 
 .icon-navbar {
   font-size: 1.3rem;
+  color:rgb(250, 250, 250);
 }
 
 .hero {
@@ -137,7 +145,7 @@ nav h3 {
 /* ---------- CLIENTS -----------  */
 
 .clients {
-  background-color: #7e8d5f45;
+  background-color: #7e8d5f30;
 }
 
 .icon-clients {
