--- a/src/index.css
+++ b/src/index.css
@@ -111,12 +111,17 @@ nav h3 {
 .card {
   width: 100%;
   border: none;
+  padding: 1rem 2rem;
 }
 
 .card-img-top {
   height: 15rem;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  background-color: #8a8a8a;
   border-radius: 0.5rem;
 }
 
