--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ nav {
   width: 100%;
   text-align: center;
   padding: 2rem 0;
-  background-image: url(./assets/waves.svg);
+  background-image: url(../public/assets/waves.svg);
 }
 
 nav h3 {
