--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ nav {
   width: 100%;
   text-align: center;
   padding: 2rem 0;
-  background-image: url(../public/assets/waves.svg);
+  background-image: url(assets/waves.svg);
 }
 
 nav h3 {
@@ -41,7 +41,7 @@ nav h3 {
 }
 
 .hero {
-  background-image: url(./assets/hero.jpg);
+  background-image: url(assets/hero.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
